--- a/src/Core/Common/Common.csproj
+++ b/src/Core/Common/Common.csproj
@@ -7,8 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="34.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.Build.Framework" Version="17.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ViewModels\OTPPassword\" />
   </ItemGroup>
 
 </Project>
